<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints">

    <data>

        <variable
            name="viewModel"
            type="com.tfh.auth.viewmodel.RegisterVm" />
        
        <variable
            name="handle"
            type="com.tfh.auth.viewmodel.RegisterVm.Handle" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_account"
            android:text="@={viewModel.account}"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="12sp"
            android:singleLine="true"
            android:background="@null"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/auth_ic_person_white_18dp"
            android:drawablePadding="5dp"
            android:textColor="@color/common_white"
            android:textColorHint="@color/common_white"
            app:bl_corners_radius="5dp"
            app:hintTextColor="@color/common_white"
            app:bl_solid_color="@color/auth_color_45_white"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password"
            android:text="@={viewModel.password}"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="12sp"
            android:singleLine="true"
            android:background="@null"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/auth_ic_person_white_18dp"
            android:drawablePadding="5dp"
            android:textColor="@color/common_white"
            android:textColorHint="@color/common_white"
            app:bl_corners_radius="5dp"
            android:inputType="textPassword"
            app:hintTextColor="@color/common_white"
            app:bl_solid_color="@color/auth_color_45_white"
            app:layout_constraintTop_toBottomOf="@+id/et_account"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_confirm_password"
            android:text="@={viewModel.rePassword}"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="12sp"
            android:singleLine="true"
            android:background="@null"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:drawableStart="@drawable/auth_ic_person_white_18dp"
            android:drawablePadding="5dp"
            android:textColor="@color/common_white"
            android:textColorHint="@color/common_white"
            app:bl_corners_radius="5dp"
            android:inputType="textPassword"
            app:hintTextColor="@color/common_white"
            app:bl_solid_color="@color/auth_color_45_white"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password">

            <com.tfh.library_common.widget.view.TypefaceTextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/auth_color_333333"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/auth_register"
                android:onClick="@{handle::toRegister}"
                app:common_typeface="dinTypeface"
                app:bl_corners_radius="5dp"
                app:bl_unpressed_color="@color/common_white"
                app:bl_pressed_color="@color/auth_color_45_white"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.tfh.library_common.widget.view.TypefaceTextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/common_white"
                android:textSize="14sp"
                android:text="@string/auth_to_login"
                android:layout_marginTop="35dp"
                android:onClick="@{handle::toLogin}"
                app:common_typeface="dinTypeface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>